# Ferris

./: .gitignore  Cargo.toml  Dockerfile  INTEGRATION_README.md  README.md  ROADMAP.md
scripts/: smoke_endpoints.ps1  smoke_endpoints.py
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  realtime.rs  web.rs  ws_shared.rs
src/exchanges/: mod.rs  registry.rs  traits.rs
src/exchanges/binance/: mod.rs
src/exchanges/bybit/: mod.rs
src/exchanges/hyperliquid/: mod.rs
tests/: live_endpoints.rs  realtime_ws.rs
