[package]
name = "ferris-market-data-backend"
version = "0.1.0"
edition = "2021"
default-run = "ferris-market-data-backend"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["json", "macros"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
futures-util = "0.3.32"
crossterm = "0.28.1"
